--- a/wordpress/playbooks/db.yml
+++ b/wordpress/playbooks/db.yml
@@ -10,4 +10,10 @@
         name: mysql
       vars:
 
+  tasks:
+    - name: include rote php
+      include_role:
+        name: php
+      vars:
+
 ...
