--- a/wordpress/site.yml
+++ b/wordpress/site.yml
@@ -1,3 +1,5 @@
 ---
-- import_playbook: playbooks/nginx.yml
+- import_playbook: playbooks/db.yml
+- import_playbook: playbooks/front.yml
+- import_playbook: playbooks/app.yml
 ...
