--- a/lamp/roles/wordpress/templates/wordpress.conf
+++ b/lamp/roles/wordpress/templates/wordpress.conf
@@ -4,7 +4,7 @@ server {
     root {{ wp_directory }}/wordpress;
     index index.php index.html index.htm;
 
-    server_name {{ domain }};
+    server_name {{ wp_domain }};
 
     location / {
         try_files $uri $uri/ /index.php?q=$uri&$args;
@@ -26,9 +26,9 @@ server {
 
     server {
         listen 80;
-        server_name www.{{ domain }};
+        server_name www.{{ wp_domain }};
         location / {
-            return 301 http://{{ domain }}
+            return 301 http://{{ wp_domain }}
         }
     }
 }
