--- a/lamp/roles/php/tasks/main.yml
+++ b/lamp/roles/php/tasks/main.yml
@@ -4,14 +4,19 @@
     pkg: "{{ item }}"
   with_items:
     - php7.2
+    - php7.2-cli
     - php7.2-fpm
-    - php7.2-cgi
-    - php7.2-memcache
-    - php7.2-memcached
+    - php7.2-json
+    - php7.2-pdo
     - php7.2-mysql
+    - php7.2-zip
     - php7.2-gd
+    - php7.2-mbstring
     - php7.2-curl
-    - php7.2-xmlrpc
+    - php7.2-xml
+    - php-pear    
+    #- php7.2-cgi
+    #- php7.2-xmlrpc
 
 
 # [www]
