--- a/lamp/roles/wordpress/templates/wordpress.conf
+++ b/lamp/roles/wordpress/templates/wordpress.conf
@@ -1,34 +1,51 @@
 server {
-    listen 80 default_server;
+  listen 80;
+  listen [::]:80;
+  server_name www.{{ wp_domain }} {{ wp_domain }};
+  root {{ wp_directory }}/wordpress;
+  index index.php index.html index.htm index.nginx-debian.html;
 
-    root {{ wp_directory }}/wordpress;
-    index index.php index.html index.htm;
+  location / {
+    try_files $uri $uri/ /index.php;
+  }
 
-    server_name {{ wp_domain }};
+  location ~* /wp-sitemap.*\.xml {
+     try_files $uri $uri/ /index.php$is_args$args;
+  }
 
-    location / {
-        try_files $uri $uri/ /index.php?q=$uri&$args;
-    }
+  error_page 404 /404.html;
+  error_page 500 502 503 504 /50x.html;
 
-    error_page 404 /404.html
-    error_page 500 502  503 504  /50x.html
+  location = /50x.html {
+    root /usr/share/nginx/html;
+  }
 
-    location = /50x.html {
-        root /usr/share/nginx/www;
-    }
+  location ~ \.php$ {
+    fastcgi_pass unix:/run/php/php7.2-fpm.sock;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    include fastcgi_params;
+    include snippets/fastcgi-php.conf;
+  }
 
-    location ~ \.php$ {
-        try_files $uri = 404;
-        fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
-        fastcgi_index index.php;
-        include fastcgi_params;
-    }
+  #enable gzip compression
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 1000;
+  gzip_comp_level 5;
+  gzip_types application/json text/css application/x-javascript application/javascript image/svg+xml;
+  gzip_proxied any;
 
-    server {
-        listen 80;
-        server_name www.{{ wp_domain }};
-        location / {
-            return 301 http://{{ wp_domain }}
-        }
-    }
+  # A long browser cache lifetime can speed up repeat visits to your page
+  location ~* \.(jpg|jpeg|gif|png|webp|svg|woff|woff2|ttf|css|js|ico|xml)$ {
+       access_log        off;
+       log_not_found     off;
+       expires           360d;
+  }
+
+  # disable access to hidden files
+  location ~ /\.ht {
+      access_log off;
+      log_not_found off;
+      deny all;
+  }
 }
