--- a/lamp/roles/wordpress/defaults/main.yml
+++ b/lamp/roles/wordpress/defaults/main.yml
@@ -6,4 +6,5 @@ db_password: "7f7g7H8H9h!"
 wp_domain: "example.com"
 wp_download_url: "http://wordpress.org/latest.tar.gz"
 wp_directory: "/var/www"
+wp_table_prefix: "wp_"
 ...
