Resolved problem with apache2

--- a/lamp/roles/wordpress/handlers/main.yml
+++ b/lamp/roles/wordpress/handlers/main.yml
@@ -1,6 +1,14 @@
 ---
+- name: disabled apache2
+  # ansible.builtin.service:
+  systemd: 
+    name: apache2
+    state: stopped
+    enabled: no
+
 - name: restart nginx
   systemd:
     name: nginx
     state: restarted
+
 ...
