--- a/lamp/playbooks/db.yml
+++ b/lamp/playbooks/db.yml
@@ -5,13 +5,9 @@
   become: yes
 
   tasks:
-    - name: include role wait
-      include_role:
-        name: wait
-      vars:
-
     - name: include role mysql
       include_role: 
         name: mysql
       vars:
+        mysql_root_password: "{{ pb_mysql_root_password }}"
 ...
