--- a/lamp/site.yml
+++ b/lamp/site.yml
@@ -1,4 +1,5 @@
 ---
+- import_playbook: playbooks/wait.yml
 - import_playbook: playbooks/db.yml
 - import_playbook: playbooks/front.yml
 - import_playbook: playbooks/app.yml
