--- a/lamp/roles/php/tasks/main.yml
+++ b/lamp/roles/php/tasks/main.yml
@@ -3,16 +3,41 @@
   apt:
     pkg: "{{ item }}"
   with_items:
-    - php7.2
-    - php7.2-cli
-    - php7.2-fpm
-    - php7.2-json
-    - php7.2-pdo
-    - php7.2-mysql
-    - php7.2-zip
-    - php7.2-gd
-    - php7.2-mbstring
-    - php7.2-curl
-    - php7.2-xml
-    - php-pear
+    - "php{{ php_version }}"
+    - "php{{ php_version }}-cli"
+    - "php{{ php_version }}-fpm"
+    - "php{{ php_version }}-json"
+    - "php{{ php_version }}-pdo"
+    - "php{{ php_version }}-mysql"
+    - "php{{ php_version }}-zip"
+    - "php{{ php_version }}-gd"
+    - "php{{ php_version }}-mbstring"
+    - "php{{ php_version }}-curl"
+    - "php{{ php_version }}-xml"
+    - "php-pear"
+
+# - name: backup php-fpm global
+#   copy:
+#     src: "{{ php_etc_directory }}/fpm/php-fpm.conf"
+#     dest: "{{ php_etc_directory }}/fpm/php-fpm.conf.bkp"
+
+# - name: backup php-fpm socket
+#   copy:
+#     src: "{{ php_etc_directory }}/fpm/pool.d/www.conf"
+#     dest: "{{ php_etc_directory }}/fpm/pool.d/www.conf.bkp"
+
+- name: config php-fpm global
+  template:
+    src: php-fpm.conf.j2
+    dest: "{{ php_etc_directory }}/fpm/php-fpm.conf"
+    backup: yes
+  notify: restart php-fpm
+
+- name: config php-fpm socket
+  template:
+    src: www.conf.j2
+    dest: "{{ php_etc_directory }}/fpm/pool.d/www.conf"
+    backup: yes
+  notify: restart php-fpm
+
 ...
