--- a/lamp/roles/wordpress/tasks/main.yml
+++ b/lamp/roles/wordpress/tasks/main.yml
@@ -3,6 +3,7 @@
   mysql_db:
     name: "{{ db_name }}"
     state: present
+    # login_user_socket: /run/mysqld/mysqld.sock
     login_user: "root"
     login_password: "{{ mysql_root_password }}"
 
@@ -12,13 +13,14 @@
     password: "{{ db_password }}"
     priv: "{{ db_name }}.*:ALL"
     state: present
+    # login_user_socket: /run/mysqld/mysqld.sock
     login_user: "root"
     login_password: "{{ mysql_root_password }}"
 
 - name: create nginx configuration
   template:
-    src: wordpress.conf
-    dest: /etc/nginx/sites-available/wordpress.conf
+    src: wordpress.conf.j2
+    dest: "/etc/nginx/sites-available/{{ nginx_config_name }}.conf"
 
 - name: download wordpress
   get_url:
@@ -37,7 +39,7 @@
 
 - name: create wp-config.php
   template:
-    src: "wp-config.php"
+    src: wp-config.php.j2
     dest: "{{ wp_directory }}//wp-config.php"
   when: wp_directory is defined
 
@@ -47,8 +49,8 @@
 
 - name: activate nginx configuration
   file:
-    src: /etc/nginx/sites-available/wordpress.conf
-    dest: /etc/nginx/sites-enabled/wordpress.conf
+    src: "/etc/nginx/sites-available/{{ nginx_config_name }}.conf"
+    dest: "/etc/nginx/sites-enabled/{{ nginx_config_name }}.conf"
     state: link
   notify: 
     - disabled apache2
