--- a/lamp/roles/wordpress/defaults/main.yml
+++ b/lamp/roles/wordpress/defaults/main.yml
@@ -8,4 +8,5 @@ wp_download_url: "http://wordpress.org/latest.tar.gz"
 wp_directory: "/var/www"
 wp_table_prefix: "wp_"
 nginx_config_name: "wordpress"
+wordpress_hostname: "{{ ansible_host }}"
 ...
